modified repo section

--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
     </developers>
     <distributionManagement>
         <repository>
-            <id>deployment</id>
+            <id>nexus</id>
             <name>Internal Releases</name>
             <url>http://192.168.99.100:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>deployment</id>
+            <id>nexus</id>
             <name>Internal Snapshot Releases</name>
             <url>http://192.168.99.100:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
